Delete unnecessary image and update company logo

--- a/static/css/integrations.css
+++ b/static/css/integrations.css
@@ -16,10 +16,16 @@ html, body {
 
 .company-name {
   margin-right: 10px;
-  font-family: Arial, sans-serif; /* Change this to your preferred font */
+  font-family: Arial, sans-serif; 
   font-weight: bold;
   font-style: italic;
 }
+
+.company-name img {
+  height: 101px; /* Adjust as needed */
+  width: auto;
+}
+
 
 
 .sidepanel {
