--- a/templates/settings.html
+++ b/templates/settings.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <div class="top-ribbon">
-        <span class="company-name">EccoAI</span>
+        <span class="company-name">
+            <a href="https://www.eccoai.org/">
+                <img src="{{ url_for('static', filename='images/logoword2.png') }}" alt="Company Logo">
+            </a>
+        </span>
     </div>
     <div class="sidenav">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
@@ -160,22 +164,16 @@
             var iframe = document.getElementById('chatbot-iframe');
             if (iframe.style.display === 'none') {
                 iframe.style.display = 'block';
-                // Add the event listener when the chatbot is opened
-                document.addEventListener('click', closeChatbotOnClickOutside);
             } else {
                 iframe.style.display = 'none';
-                // Remove the event listener when the chatbot is closed
-                document.removeEventListener('click', closeChatbotOnClickOutside);
             }
         });
 
         function closeChatbot() {
             var iframe = document.getElementById('chatbot-iframe');
             iframe.style.display = 'none';
-            // Remove the event listener when the chatbot is closed
-            document.removeEventListener('click', closeChatbotOnClickOutside);
         }
-    </script>   
+    </script>      
     <script src="{{ url_for('static', filename='js/settings.js') }}"></script>
 </body>
 </html>
