--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -16,6 +16,11 @@
   font-style: italic;
 }
 
+.company-name img {
+  height: 101px; /* Adjust as needed */
+  width: auto;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
