--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <div class="top-ribbon">
-        <span class="company-name">EccoAI</span>
+        <span class="company-name">
+            <a href="https://www.eccoai.org/">
+                <img src="{{ url_for('static', filename='images/logoword2.png') }}" alt="Company Logo">
+            </a>
+        </span>
     </div>
     <div class="sidenav">
         <button class="openbtn" onclick="openNav()">&#9776;</button>
