Update page titles and add favicon

--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -4,6 +4,7 @@
     <title>Inetgrations</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/integrations.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 </head>
 <body>
     <div class="top-ribbon">
