--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -18,6 +18,7 @@
             msg.style.opacity = "0";
         }, 12000); /* Change time as needed */
     </script>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 </head>
 <body>
     <div class="main-content">
