--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -241,13 +241,17 @@ body {
 
 input[type="submit"] {
     margin-left: 100px;
-    background-color: #4CAF50;
+    background-color: rgb(178, 226, 75);
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-weight: bold;
+}
+
+input[type="submit"]:hover {
+  background-color: #3e8e41;
 }
 
 select#font_style {
