Update maxlength for chatbot_title input field

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -85,7 +85,7 @@
                         <input type="color" id="border_color" name="border_color" value="{{ settings['border_color'] }}"><br><br>
         
                         <label for="chatbot_title">Chatbot Title:</label>
-                        <input type="text" id="chatbot_title" name="chatbot_title" value="{{ settings['chatbot_title'] }}"><br>
+                        <input type="text" id="chatbot_title" name="chatbot_title" value="{{ settings['chatbot_title'] }}" maxlength="20"><br>
                         <em><small>Must be no more than 20 characters.</small></em><br><br>
 
                         <label for="dot_color">Dot Color:</label>
