--- a/templates/admin.html
+++ b/templates/admin.html
@@ -28,10 +28,10 @@
     <section id="sidepanel">
         <div id="mySidepanel" class="sidepanel">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="{{ url_for('admin') }}" id="admin" class="mgn">Documents</a>
-            <a href="{{ url_for('settings') }}" id="settings">Settings</a>
-            <a href="{{ url_for('integrations') }}" id="integrations">Integrations</a>
-            <a href="{{ url_for('analytics') }}" id="analytics">Analytics</a>
+            <a href="{{ url_for('admin') }}" id="admin" class="mgn-top">Documents</a>
+            <a href="{{ url_for('settings') }}" id="settings" class="mgn">Settings</a>
+            <a href="{{ url_for('integrations') }}" id="integrations" class="mgn">Integrations</a>
+            <a href="{{ url_for('analytics') }}" id="analytics" class="mgn">Analytics</a>
             <a href="#" id="usage">Usage</a>
         </div>
             
