ecco logo added

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -70,8 +70,8 @@
                                 <img src="{{ url_for('static', filename='images/chatbot3.png') }}" alt="Icon 3">
                             </label>
                             <label for="icon4">
-                                <input type="radio" id="icon4" name="widget_icon" value="chatbot4" {% if settings['widget_icon'] == 'chatbot4' %}checked{% endif %}>
-                                <img src="{{ url_for('static', filename='images/chatbot4.png') }}" alt="Icon 4">
+                                <input type="radio" id="icon4" name="widget_icon" value="ecco_icon" {% if settings['widget_icon'] == 'ecco_icon' %}checked{% endif %}>
+                                <img src="{{ url_for('static', filename='images/ecco_icon.png') }}" alt="Icon 4">
                             </label>
                         </div><br><br>
         
