Add heading style to systemsettings

--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -234,6 +234,12 @@ body {
     color: #333;
 }
 
+.settings-section1 h3 {
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
 .settings-section form label {
     font-weight: bold;
     color: #333;
