centered the subpage buttons

--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -396,6 +396,7 @@ textarea {
 .button-holder {
   justify-content: space-between;
   margin-top: 20px;
+  margin-left: 270px;
 }
 
 .range-container {
