--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -71,6 +71,7 @@ h3 {
     border-radius: 5px;
     margin-top: 50px;
     font-family: Tahoma;
+    position: relative;
 }
 
 .click-text {
@@ -163,18 +164,6 @@ section {
     cursor: pointer;
 }
 
-.loader {
-    margin-right: 10px;
-    border: 5px solid #f3f3f3;
-    border-top: 5px solid #3498db; 
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 1s linear infinite;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 #uploading {
     display: none;
 }
@@ -183,8 +172,8 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
+    height: 300px;
+    width: 300px;
     top: 0;
     left: 0;
 }
@@ -312,10 +301,7 @@ section {
     border: 1px solid #2378ee;
   }
 
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
+
 
 /* Sidebar css ****************************************************************************************************/
 
@@ -440,3 +426,50 @@ section {
     .sidenav a {font-size: 18px;}
   }
 /* End sidebar CSS ****************************************************************************************************/
+
+
+.lds-ring {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+/* #lds-ring {
+  display: none;
+} */
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 220px;
+  height: 220px;
+  margin: 18px;
+  border: 12px solid rgb(178, 226, 75);
+  border-radius: 50%;
+  animation: lds-ring 1.5s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: rgb(178, 226, 75) transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
