--- a/templates/admin.html
+++ b/templates/admin.html
@@ -80,9 +80,11 @@
                         </div>
                         
                         <div id="loading" class="loader-div">
-                            <div class="loader"></div>
-                            <p>Uploading...</p>
+                            <div class="lds-ring" id="lds-ring"><div></div><div></div><div></div><div></div></div>
+                            <!-- <h3 id="loading-text">Uploading...</h3> -->
                         </div>
+                        
+                        
                     </form>
                 </section>
 
