--- a/templates/admin.html
+++ b/templates/admin.html
@@ -86,6 +86,21 @@
                         
                         
                     </form>
+                    <!-- url form -->
+                    <form class="form form_1" action="/scrape" method="post" enctype="multipart/form-data" id="upload-form">
+                        <div class="url-area">
+                            <label for="url">Or enter a URL:</label>
+                            <input type="url" id="url" name="url" required>
+                        </div>
+                        <button  type="submit" value="Upload">
+                            <span class="button__text">Upload</span>
+                            <span class="button__icon"><img src="{{ url_for('static', filename='images/upload.png') }}" height="30" width="30" alt="upload"></span>
+                        </button>
+                        <div id="loading" class="loader-div">
+                            <div class="lds-ring" id="lds-ring"><div></div><div></div><div></div><div></div></div>
+                            <!-- <h3 id="loading-text">Uploading...</h3> -->
+                        </div>
+                    </form>
                 </section>
 
                 <section >
@@ -112,15 +127,17 @@
                                     {% set file_icon = 'xlsx' %}
                                 {% elif 'doc' in file_extension %}
                                     {% set file_icon = 'docx' %}
+                                {% elif document.name.startswith('http') %}
+                                    {% set file_icon = 'url' %}
                                 {% else %}
-                                    {% set file_icon = 'default' %}
+                                    {% set file_icon = 'file' %}
                                 {% endif %}
 
                                 <tr>
                                     <td><img src="{{ url_for('static', filename='images/' + file_icon + '.png') }}" height="30" width="30" alt="{{ file_icon }}-icon"></td>
                                     <td>{{ document.name }}</td>
                                     <td class="sub-column">{{ document.size }} Mb</td>
-                                    <td class="sub-column">{{ document.date_added }}</td>
+                                    <td class="sub-column">{{ document.date_added.strftime('%m/%d/%Y') }}</td>
                                     <td>
                                         <div class="bin-container">
                                             <form action="/delete/{{ document.id }}" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
