every question is tracked and stop doing url rn

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -87,7 +87,7 @@
                         
                     </form>
                     <!-- url form -->
-                    <form class="form form_1" action="/scrape" method="post" enctype="multipart/form-data" id="upload-form">
+                    <!-- <form class="form form_1" action="/scrape" method="post" enctype="multipart/form-data" id="upload-form">
                         <div class="url-area">
                             <label for="url">Or enter a URL:</label>
                             <input type="url" id="url" name="url" required>
@@ -98,9 +98,8 @@
                         </button>
                         <div id="loading" class="loader-div">
                             <div class="lds-ring" id="lds-ring"><div></div><div></div><div></div><div></div></div>
-                            <!-- <h3 id="loading-text">Uploading...</h3> -->
                         </div>
-                    </form>
+                    </form> -->
                 </section>
 
                 <section >
