--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -154,6 +154,9 @@ html, body {
 .dislike {
     background-color: lightcoral;
 }
+.none {
+  background-color: transparent; 
+}
 
 .flex-container {
     display: flex;
