--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -33,28 +33,52 @@
             <a href="#" id="usage">Usage</a>
         </div>              
     </section>
-    <h2 class="instructions">Response Feedback</h2>
-    <div class="flex-container">
-        <div class="questions-container">
-            <table>
-                <tr>
-                    <th>User Question</th>
-                    <th>Bot Response</th>
-                    <th>Feedback</th>
+    <!-- Inside your HTML file --><!-- Inside your HTML file -->
+<h2 class="instructions">Response Feedback</h2>
+<div class="flex-container">
+    <div class="questions-container">
+            <div class="topics-container">
+                <h3>Common Topics</h3>
+                {% if common_topics is none %}
+                    <p>No topics available.</p>
+                {% else %}
+                    {% for topic_cluster in common_topics %}
+                        <button type="button" onclick="filterByTopic('{{ topic_cluster }}')">
+                            {{ topic_cluster }}
+                        </button>                
+                    {% endfor %}
+                {% endif %}
+            </div>
+        <table>
+            <tr>
+                <th>User Question</th>
+                <th>Bot Response</th>
+                <th>Feedback</th>
+                <!-- <th>Delete</th> -->
+            </tr>
+            {% for item in data %}
+                <tr class="{{ 'like' if item['feedback_type'] == 'Like' else ('dislike' if item['feedback_type'] == 'Dislike' else 'none') }}">
+                    <td>{{ item['user_question'] }}</td>
+                    <td>{{ item['bot_response'] }}</td>
+                    <td>{{ item['feedback_type'] }}</td>
+                    <!-- <td>
+                        <form action="/delete_feedback" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
+                            <input type="hidden" name="user_question" value="{{ item['user_question'] }}">
+                            <input type="hidden" name="bot_response" value="{{ item['bot_response'] }}">
+                            <input class="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" height="30" width="30" alt="Submit">
+                        </form>
+                    </td> -->
                 </tr>
-                {% for item in data %}
-                    <tr class="{{ 'like' if item['feedback_type'] == 'Like' else 'dislike' }}">
-                        <td>{{ item['user_question'] }}</td>
-                        <td>{{ item['bot_response'] }}</td>
-                        <td>{{ item['feedback_type'] }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-        </div>
-        <div class="chart-container">
-            <canvas id="myChart"></canvas>
-        </div>
+            {% endfor %}
+        </table>
     </div>
+    <div class="chart-container">
+        <canvas id="myChart"></canvas>
+    </div>
+</div>
     <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
+    <script>
+        var common_topics = JSON.parse('{{ common_topics|tojson|safe }}');
+    </script>
 </body>
 </html>
