--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/analytics.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="top-ribbon">
@@ -34,51 +35,48 @@
         </div>              
     </section>
     <!-- Inside your HTML file --><!-- Inside your HTML file -->
-<h2 class="instructions">Response Feedback</h2>
-<div class="flex-container">
-    <div class="questions-container">
+    <h2 class="instructions">Response Feedback</h2>
+    <div class="flex-container">
+        <div class="questions-container">
             <div class="topics-container">
                 <h3>Common Topics</h3>
                 {% if common_topics is none %}
                     <p>No topics available.</p>
                 {% else %}
                     {% for topic_cluster in common_topics %}
-                        <button type="button" onclick="filterByTopic('{{ topic_cluster }}')">
+                        <button type="button" onclick="sendTopic('{{ topic_cluster }}')">
                             {{ topic_cluster }}
                         </button>                
                     {% endfor %}
                 {% endif %}
             </div>
-        <table>
-            <tr>
-                <th>User Question</th>
-                <th>Bot Response</th>
-                <th>Feedback</th>
-                <!-- <th>Delete</th> -->
-            </tr>
-            {% for item in data %}
-                <tr class="{{ 'like' if item['feedback_type'] == 'Like' else ('dislike' if item['feedback_type'] == 'Dislike' else 'none') }}">
-                    <td>{{ item['user_question'] }}</td>
-                    <td>{{ item['bot_response'] }}</td>
-                    <td>{{ item['feedback_type'] }}</td>
-                    <!-- <td>
-                        <form action="/delete_feedback" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
-                            <input type="hidden" name="user_question" value="{{ item['user_question'] }}">
-                            <input type="hidden" name="bot_response" value="{{ item['bot_response'] }}">
-                            <input class="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" height="30" width="30" alt="Submit">
-                        </form>
-                    </td> -->
+            <table>
+                <tr>
+                    <th>User Question</th>
+                    <th>Bot Response</th>
+                    <th>Feedback</th>
+                    <!-- <th>Delete</th> -->
                 </tr>
-            {% endfor %}
-        </table>
+                {% for item in data %}
+                    <tr class="question-row {{ 'like' if item['feedback_type'] == 'Like' else ('dislike' if item['feedback_type'] == 'Dislike' else 'none') }}">
+                        <td class="user-question">{{ item['user_question'] }}</td>
+                        <td>{{ item['bot_response']|safe }}</td>
+                        <td>{{ item['feedback_type'] }}</td>
+                        <!-- <td>
+                            <form action="/delete_feedback" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
+                                <input type="hidden" name="user_question" value="{{ item['user_question'] }}">
+                                <input type="hidden" name="bot_response" value="{{ item['bot_response'] }}">
+                                <input class="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" height="30" width="30" alt="Submit">
+                            </form>
+                        </td> -->
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+        <div class="chart-container">
+            <canvas id="myChart"></canvas>
+        </div>
     </div>
-    <div class="chart-container">
-        <canvas id="myChart"></canvas>
-    </div>
-</div>
     <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
-    <script>
-        var common_topics = JSON.parse('{{ common_topics|tojson|safe }}');
-    </script>
 </body>
 </html>
