--- a/templates/admin.html
+++ b/templates/admin.html
@@ -87,7 +87,7 @@
                         
                     </form>
                     <!-- url form -->
-                    <!-- <form class="form form_1" action="/scrape" method="post" enctype="multipart/form-data" id="upload-form">
+                    <form class="form form_1" action="/scrape" method="post" enctype="multipart/form-data" id="upload-form">
                         <div class="url-area">
                             <label for="url">Or enter a URL:</label>
                             <input type="url" id="url" name="url" required>
@@ -99,7 +99,7 @@
                         <div id="loading" class="loader-div">
                             <div class="lds-ring" id="lds-ring"><div></div><div></div><div></div><div></div></div>
                         </div>
-                    </form> -->
+                    </form>
                 </section>
 
                 <section >
