--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -74,6 +74,10 @@ h3 {
     position: relative;
 }
 
+.form_1{
+  display: flex;
+}
+
 .click-text {
     color: rgb(0, 132, 255);
     text-decoration: underline;
@@ -183,6 +187,22 @@ section {
     text-align: left;
     padding: 20px 0;
     align-items: center;
+}
+
+#loading_1 {
+  display: none;
+  text-align: left;
+  padding: 20px 0;
+  align-items: center;
+}
+
+#url-area{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px;
+    padding: 3px;
+    border-radius: 5px;
 }
 
 .bin{
