--- a/templates/admin.html
+++ b/templates/admin.html
@@ -87,16 +87,18 @@
                         
                     </form>
                     <!-- url form -->
-                    <form class="form form_1" action="/scrape" method="post" enctype="multipart/form-data" id="upload-form">
-                        <div class="url-area">
-                            <label for="url">Or enter a URL:</label>
-                            <input type="url" id="url" name="url" required>
+                    <form class="form form_1" action="/scrape" method="post" enctype="multipart/form-data" id="url-form">
+                        <div id="url-area">
+                            <div id="url-input">
+                                <label for="url">Or enter a URL:</label>
+                                <input type="url" id="url" name="url" required>
+                            </div>
+                            <button  type="submit" value="Upload">
+                                <span class="button__text">Upload</span>
+                                <span class="button__icon"><img src="{{ url_for('static', filename='images/upload.png') }}" height="30" width="30" alt="upload"></span>
+                            </button>
                         </div>
-                        <button  type="submit" value="Upload">
-                            <span class="button__text">Upload</span>
-                            <span class="button__icon"><img src="{{ url_for('static', filename='images/upload.png') }}" height="30" width="30" alt="upload"></span>
-                        </button>
-                        <div id="loading" class="loader-div">
+                        <div id="loading_1" class="loader-div">
                             <div class="lds-ring" id="lds-ring"><div></div><div></div><div></div><div></div></div>
                         </div>
                     </form>
