--- a/templates/admin.html
+++ b/templates/admin.html
@@ -81,7 +81,7 @@
                         
                         <div id="loading" class="loader-div">
                             <div class="lds-ring" id="lds-ring"><div></div><div></div><div></div><div></div></div>
-                            <!-- <h3 id="loading-text">Uploading...</h3> -->
+                            <h3 id="loading-text">This may take a little while.</h3>
                         </div>
                         
                         
