--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -205,6 +205,42 @@ section {
     border-radius: 5px;
 }
 
+#url-input{
+    display: flex;
+    justify-content: space-between;
+}
+
+#url{
+    border: 1px solid #a3a3a3;
+    border-radius: 5px;
+    margin-bottom: 8px;
+    margin-left: 5px;
+    width: 400px;
+    margin-top: 30px;
+}
+
+.url-label{
+    margin-left: 5px;
+    margin-top: 30px;
+}
+
+.url-button {
+  background-color: #4dbbff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  margin-left: 50px;
+  transition: background-color 0.3s ease;
+  margin-top: 30px;
+}
+
+.url-button:hover {
+  background-color: #2a8fd8;
+  color: white;
+}
+
 .bin{
     color: red;
     cursor: pointer;
