simple ui upgrate to error page

--- a/templates/error.html
+++ b/templates/error.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="/static/css/error.css">
 </head>
 <body>
-    <h1>Error</h1>
-    <p>Whoops, seems like there was an Error
-        <br>Error: {{ message }}</p>
-    <a href="/login">Go back to login</a>
+    <h1>Oops!</h1>
+    <p>Error: {{ message }}</p>
+    <button><a href="/login">Go back to login</a></button>
+    
 </body>
 </html>
