--- a/templates/admin.html
+++ b/templates/admin.html
@@ -93,7 +93,7 @@
                                 <label class="url-label" for="url">Or enter a URL:</label>
                                 <input type="url" id="url" name="url" required>
                             </div>
-                            <button  type="submit" value="Upload" class="url-button">
+                            <button id="submit-button" type="submit" value="Upload" class="url-button" disabled>
                                 <span class="button__icon"><img src="{{ url_for('static', filename='images/upload.png') }}" height="30" width="30" alt="upload"></span>
                             </button>
                         </div>
