--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,7 @@
                         <div class="chatbox-top">{{ settings.chatbot_title }}</div> 
                     </span>
                     <div class="chatbox-close">
-                        <div id="refresh">
-                            <img src="{{ url_for('static', filename='images/refresh.png') }}" alt="Refresh" width="20" height="20">
-                        </div>
+                        <img id="close-button" class="close-button" src="{{ url_for('static', filename='images/down-arrow.svg') }}" alt="Close">
                     </div>
                     <!-- <div class="chatbox-close" id="chatbox-close">X</div> -->
                 </div>
@@ -34,7 +32,9 @@
                 <div class="chatbox-input">
                     <div class="input-wrapper">
                         <input type="text" id="user-input" placeholder="Ask a question...">
-                        <button id="send-button">Send</button>
+                        <div id="send-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" id="fi_10322482"><path d="m22.1012 10.5616-19.34831-9.43824c-.1664-.08117-.34912-.12336-.53427-.12336-.67302 0-1.21862.5456-1.21862 1.21862v.03517c0 .16352.02005.32643.05971.48507l1.85597 7.42384c.05069.2028.22214.3526.42986.3757l8.15756.9064c.2829.0314.4969.2705.4969.5552s-.214.5238-.4969.5552l-8.15756.9064c-.20772.0231-.37917.1729-.42986.3757l-1.85597 7.4238c-.03966.1587-.05971.3216-.05971.4851v.0352c0 .673.5456 1.2186 1.21862 1.2186.18515 0 .36787-.0422.53427-.1234l19.34831-9.4382c.5499-.2682.8988-.8265.8988-1.4384s-.3489-1.1702-.8988-1.4384z" fill="rgb(0,0,0)"></path></svg>
+                        </div>
                     </div>
                 </div>
             </div>
