--- a/static/css/index.css
+++ b/static/css/index.css
@@ -63,7 +63,7 @@
             flex-grow: 1;
             padding: 5px;
             width: 330px;
-            height: 460px;
+            height: 440px; 
             overflow-y: scroll;
             font-family: var(--font-family);
             background-color: var(--background-color);
@@ -76,6 +76,23 @@
             align-items: center;
             padding: 10px;
             background-color: #ffffff;
+        }
+
+        .powered-by {
+            text-align: center;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            font-family: 'Roboto', sans-serif;
+            font-style: italic; 
+            color: grey; 
+        }
+
+        .powered-by img {
+            height: 15px;
+            vertical-align: middle;
+            padding-bottom: 4px;
+            padding-left: 2px;
         }
         
         .input-wrapper {
