--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -27,10 +27,10 @@
     <section id="sidepanel">
         <div id="mySidepanel" class="sidepanel">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="{{ url_for('admin') }}" id="admin" class="mgn-top">Documents</a>
-            <a href="{{ url_for('settings') }}" id="settings" class="mgn">Settings</a>
-            <a href="{{ url_for('integrations') }}" id="integrations" class="mgn">Integrations</a>
-            <a href="{{ url_for('analytics') }}" id="analytics" class="mgn">Analytics</a>
+            <a href="{{ url_for('admin', chatbot_id=chatbot_id) }}" id="admin" class="mgn-top">Documents</a>
+            <a href="{{ url_for('settings', chatbot_id=chatbot_id) }}" id="settings" class="mgn">Settings</a>
+            <a href="{{ url_for('integrations', chatbot_id=chatbot_id) }}" id="integrations" class="mgn">Integrations</a>
+            <a href="{{ url_for('analytics', chatbot_id=chatbot_id) }}" id="analytics" class="mgn">Analytics</a>
             <a href="#" id="usage">Usage</a>
         </div>              
     </section>
@@ -66,13 +66,6 @@
                         <td class="user-question">{{ item['user_question'] }}</td>
                         <td>{{ item['bot_response']|safe }}</td>
                         <td>{{ item['feedback_type'] }}</td>
-                        <!-- <td>
-                            <form action="/delete_feedback" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
-                                <input type="hidden" name="user_question" value="{{ item['user_question'] }}">
-                                <input type="hidden" name="bot_response" value="{{ item['bot_response'] }}">
-                                <input class="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" height="30" width="30" alt="Submit">
-                            </form>
-                        </td> -->
                     </tr>
                 {% endfor %}
             </table>
@@ -82,39 +75,5 @@
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
-
-    <!-- <div class="ac">
-        <button class="bc" aria-label="Close">X</button>
-        <div class="alert">If you have any questions about the site or any information, ask here.</div>
-    </div>
-    <div>
-        <img id="cb" src="https://app.eccoai.org//static/images/chatboticon.png" alt="Chat">
-    </div>
-    <iframe src="https://app.eccoai.org/54" id="ci" frameborder="0" scrolling="no"></iframe>
-    <script>
-        var cb = document.getElementById('cb'), ci = document.getElementById('ci'), cl = document.querySelector('.bc'), ac = document.querySelector('.ac');
-        cb.addEventListener('mouseover', function() { this.style.transform = 'scale(1.1)'; });
-        cb.addEventListener('mouseout', function() { this.style.transform = 'scale(1)'; });
-        cb.addEventListener('click', function() {
-            if (ci.style.display !== 'block') {
-                ci.style.display = 'block';
-                document.addEventListener('click', closeChatbotOnClickOutside);
-                ac.style.display = 'none';
-            } else {
-                ci.style.display = 'none';
-                document.removeEventListener('click', closeChatbotOnClickOutside);
-            }
-        });
-        function closeChatbotOnClickOutside(e) {
-            if (e.target.id !== 'ci' && e.target.id !== 'cb') { closeChatbot(); }
-        }
-        function closeChatbot() {
-            ci.style.display = 'none';
-            document.removeEventListener('click', closeChatbotOnClickOutside);
-        }
-        cl.addEventListener('click', function() { ac.style.display = 'none'; });
-    </script>
-    <style>.ac { position: fixed; bottom: 90px; right: 10px; z-index: 1001; width: 300px; background-color: rgb(60, 60, 60); padding: 20px; border-radius: 10px; color: rgb(227, 227, 227); font-family: Tahoma; }.bc { position: absolute; top: 0; right: 0; border: none; margin: 3px; background-color: rgb(60, 60, 60); color: rgb(227, 227, 227); }.bc:hover { transform: scale(1.1); background-color: rgb(80, 80, 80); }#cb { width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out; }#ci { display: none; position:fixed; bottom:80px; right:0; z-index:9999; width:400px; height:700px; }</style>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 </html>
